@@ -2,6 +2,7 @@ Change Log
 --
 version 0.1.8
 
+python profiler interface
 debugger executes, and evaluates arbitrary python expressions in the namespace
 of the debugged application
 debugger context listing in main vim on list button click, and frame d-click
